# python-dataset-sdk

./: .gitignore  LICENSE  README.md  README_DEVELOPMENT.md  example.ipynb  example_datasets.ipynb  example_graphs_and_maps.ipynb  example_measurements.ipynb  main.py  meteoblue_measurements_sdk_tutorial.ipynb  noxfile.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish-test.yml  python-publish.yml  python-test.yml
mbdataset/: Dataset.proto  Dataset_pb2.py  client.py
meteoblue_dataset_sdk/: Dataset.proto  Dataset_pb2.py  __init__.py  caching.py  client.py  utils.py
meteoblue_dataset_sdk/caching/: __init__.py  abstractcache.py  cache.py  filecache.py
meteoblue_dataset_sdk/protobuf/: dataset_pb2.py  measurements.proto  measurements_pb2.py
package/: meteoblue_dataset_sdk.py
tests/: test_cache.py  test_measurement_query.py  test_query.py
