[metadata]
name = meteoblue_dataset_sdk
description = Easy access to the meteoblue dataset API
author = meteoblue AG
author_email = patrick.zippenfenig@meteoblue.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/meteoblue/python-dataset-sdk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
keywords =
    meteoblue

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    aiohttp>=3.6,<4
    protobuf>=3.0,<4
setup_requires =
    setuptools_scm

[options.extras_require]
dev =
    pytest
    flake8
test =
    pytest

[flake8]
max-line-length = 88
max-doc-length = 100
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    meteoblue_dataset_sdk/__init__.py,
    meteoblue_dataset_sdk/Dataset_pb2.py

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = True
known_third_party = nox,pkg_resources,setuptools,aiohttp, protobuf

[black]
max_line_length = 88
line_length = 79
max-doc-length = 100
